2004-08-15  Kjartan Maraas  <kmaraas@gnome.org>

	* Makefile.am: Remove references to screen-exec.
	* mixer.c: (mixer_help_cb), (show_help_cb),
	(mixer_init_stock_icons): Use gnome_help_*. Also
	#elif defined instead of just #elif for the harware
	support stuff at the beginning of the file.

2004-07-29  Kjartan Maraas  <kmaraas@gnome.org>

	* mixer.c: (destroy_mixer_cb): Merge fix for
	bug #148708 from stable.

2004-06-26  Dennis Smit  <ds@nerds-incorporated.org>

	* mixer.c (applet_size_allocate): Added function.

	(mixer_update_image): Don't get size from the panel
	but using the allocation.

	(mixer_applet_create): Connect signal to the
	applet_size_allocate.

	Patch by: Vincent Noel  <vnoel@cox.net>

	Fixes bug #144531.

2004-06-10  Dennis Smit  <ds@nerds-incorporated.org>

	* mixer.c (mixer_applet_create): Set the correct range value
	for gtk_adjustment_new.
	(mixer_value_changed_cb): Changed -adj->value to adj->value.
	(mixer_update_slider): Removed vol = -vol (there is no need).
	(mixer_popup_show): Set vscale to inverted.
	
	Patch by:  Vijaykumar Patwari <vijaykumar.patwari@wipro.com>

	bug #125393.

2004-06-07  Jorn Baayen  <jbaayen@gnome.org>

	* mixer.c: (get_channel):

	Restore saved mixer channel on startup. Fixes #139374.

2004-04-25  Kevin Vandersloot <kfv101 psu edu>

	* mixer.c: Fix volume reduction for alsa. Fixes bug #137307. Patch
	from Jan Schmidt.

2004-04-25  Kevin Vandersloot <kfv101 psu edu>

	* *.server.in: use correct icon to theme properly. Patch from Calum Benson.
	Fixes bug #137707

2004-03-17  Glynn Foster  <glynn.foster@sun.com>

	* docs/ja/*: Add ja docs since I haven't heard from the original
	author.

2004-03-15  Glynn Foster  <glynn.foster@sun.com>

	* docs/*: Add localized online documentation from Sun's
	translation team for de, es, fr, it, ko, sv, zh_CN, zh_HK
	and zh_TW.

2004-03-15  Glynn Foster  <glynn.foster@sun.com>

	* docs/*.sgml: Remove the sgml stuff since we don't need it 
	anymore.
