@@ -1,3 +1,10 @@
+2004-09-06  Davyd Madeley  <davyd@madeley.id.au>
+
+	* Makefile.am:
+	* mixer.c: Fix install location so that mixer icon appears in Add to
+	Panel dialog. Patch by Mark McLoughlin <markmc@redhat.com>. Closes
+	#151834.
+
 2004-08-15  Kjartan Maraas  <kmaraas@gnome.org>
 
 	* Makefile.am: Remove references to screen-exec.
